[package]
name = "aoc"
version = "0.1.0"
authors = ["x-hgg-x <39058530+x-hgg-x@users.noreply.github.com>"]
edition = "2021"

[dependencies]
color-eyre = { version = "*", default-features = false }
eyre = "*"
itertools = "*"
md5 = "*"
num-complex = "*"
regex = "*"
smallvec = { version = "*", features = ["const_generics"] }

[profile.release]
debug = true
