[package]
name = "aoc"
version = "0.1.0"
authors = ["x-hgg-x"]
edition = "2024"

[dependencies]
color-eyre = { version = "*", default-features = false }
eyre = "*"
itertools = "*"
md5 = "*"
num-complex = "*"
regex = "*"
smallvec = { version = "*", features = ["const_generics"] }

[profile.release]
debug = true
